--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -448,6 +448,9 @@ li {
     @include pc {
         height: auto;
     }
+    &_02 {
+        padding: 1rem 2rem 2rem;
+    }
     &__container {
       text-align: center;
 
@@ -514,7 +517,7 @@ li {
     }
 }
 
-/* contact
+/* free
 ---------------------------------------- */
 .free {
     padding: 0.8rem 2rem 3rem;
@@ -542,10 +545,10 @@ li {
     }
 }
 
-  /* point
-  ---------------------------------------- */
+/* point
+---------------------------------------- */
 .point {
-    padding: 5rem 1.6rem 5rem;
+    padding: 5rem 1.6rem 0;
     margin: 0 auto;
     max-width: 102.4rem;
 
@@ -571,7 +574,7 @@ li {
 
         }
     }
-    h1 {
+    &__second--main {
         font-size: 3.2rem;
         font-weight: 700;
         color: #fa7da3;
@@ -609,6 +612,7 @@ li {
         text-align: center;
         margin: 0 auto;
         max-width: 35rem;
+        margin: 0 0 3rem 0;
 
         &--title {
             border-radius: 1rem 1rem 0 0;
@@ -630,42 +634,105 @@ li {
             border-radius: 0 0 1rem 1rem;
             background-color: #fff;
             border: 0.1rem solid #fa7da3;
-            padding: 1.3rem 1rem;
-        }
-        p {
-            width: 31rem;
-            font-size: 1.4rem;
-            letter-spacing: 0.1rem;
-            line-height: calc(21 / 14);
-        }
-        ol {
-            justify-content: center;
-            gap: 1rem;
-        }
-        li {
-
-        }
-        &__logo {
-
-        }
-        &__logo_01 {
-            background-color: #fff;
-            border: 1px solid #fa7da3;
-            padding: 4rem 3rem;
-        }
-        &__logo_02 {
-            background-color: #fdf0f5;
-            border: 1px solid #666666;
-            padding: 4rem 3rem;
-            font-size: 1.8rem;
-            letter-spacing: 0.2rem;
-            color: #433e3f;
-            text-align: center;
-        }
-        &__note {
-            font-size: 1.4rem;
+            padding: 1.3rem 1.3rem 2rem;
         }
     }
+    &__info--catch {
+        font-size: 1.4rem;
+        line-height: calc(21 / 14);
+        text-align: left;
+        padding: 0 0 1.5rem 0;
+    }
+    &__item--detail {
+        justify-content: center;
+        gap: 2rem;
+    }
+    &__place {
+
+    }
+    &__place_01 {
+        background-color: #fff;
+        border: 1px solid #fa7da3;
+        padding: 2.4rem 4rem;
+    }
+    &__place_02 {
+        background-color: #fdf0f5;
+        border: 1px solid #666666;
+        padding: 3.4rem 3.2rem;
+        font-size: 1.8rem;
+        letter-spacing: 0.2rem;
+        color: #433e3f;
+        text-align: center;
+    }
+    &__note {
+        font-size: 1.4rem;
+        padding: 1rem 0 0 0;
+    }
+
+
+/* -------- point02 -------- */
+
+    &__item--info_02 {
+        padding: 1.3rem 1.5rem 2rem;
+        font-size: 1.4rem;
+        text-align: left;
+    }
+    &__info--catch_02 {
+        padding: 0 0 0.5rem 0;
+    }
+    &__second--main_02 {
+        color: #4d2c1c;
+        font-size: 2.3rem;
+        font-weight: 700;
+        padding: 2.1rem 0 2.9rem 0;
+        text-align: center;
+
+        @include pc {
+            font-size: 2rem;
+            padding: 0.7rem 0 2.2rem 0;
+        }
+    }
+    &__second--main_03 {
+        color: #4d2c1c;
+        font-size: 2.3rem;
+        font-weight: 700;
+        padding: 3.3rem 0 1.9rem 0;
+        text-align: center;
+
+        @include pc {
+            font-size: 2rem;
+            padding: 0.7rem 0 2.2rem 0;
+        }
+  }
+    &__item--detail_02 {
+        flex-wrap: wrap;
+        margin: 1rem 0 0;
+        row-gap: 1.5rem;
+    }
+    &__second-pic {
+
+    }
+    &__second--name {
+        font-size: 1.4rem;
+        color: #fa7da3;
+        font-weight: 700;
+        padding: 0.5rem 0 0;
+        text-align: center;
+    }
+    &__second--name_01 {
+
+    }
+
+/* -------- point03 -------- */
+
+    &__item--info_03 {
+      padding: 1.3rem 1.5rem 2rem;
+      font-size: 1.4rem;
+      text-align: left;
+    }
+}
+
+
 
 
     .swiper__container {
@@ -794,7 +861,7 @@ li {
             }
         }
     }
-}
+
 
 /* questions
 ---------------------------------------- */
@@ -972,7 +1039,7 @@ li {
 /* footer
 -------------------------------------------- */
 .footer {
-    background-color: #0071CE;
+    background-color: #fff;
     padding: 2.9rem 1.6rem 2.4rem;
 
     @include pc {
