--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -102,7 +102,7 @@ li {
     opacity: 1;
 
     @include pc {
-        height: 7rem;
+        height: 9.5rem;
         overflow: visible;
     }
 
@@ -113,7 +113,10 @@ li {
         height: 6.3rem;
 
         @include pc {
-          justify-content: center;
+          justify-content: space-between;
+          max-width: 103rem;
+          margin: 0 auto;
+          height: 9.5rem;
         }
     }
     &__logo {
@@ -124,8 +127,7 @@ li {
         width: 7.3rem;
 
         @include pc {
-            max-width: 16.6rem;
-            margin: 0 1.6rem;
+            margin: 0 0.6rem;
         }
 
         img {
@@ -133,8 +135,8 @@ li {
             display: flex;
 
             @include pc {
-                max-width: 16.6rem;
-                margin: 0 1.6rem;
+                width: 10rem;
+                max-width: 150%;
             }
         }
     }
@@ -157,7 +159,7 @@ li {
             @include pc {
                 display: flex;
                 padding: 0;
-                gap: 3.2rem;
+                gap: 2.5rem;
                 margin: 0;
             }
         }
@@ -166,7 +168,10 @@ li {
             background-color: #fa7da3;
 
             @include pc {
-                margin: 0 0 0 6.2rem;
+                width: 18.8rem;
+                padding: 1.1rem 1.1rem 1.1rem;
+                font-size: 2.1rem;
+                border-radius: 2.5rem;
             }
 
             &:hover {
@@ -189,7 +194,10 @@ li {
             color: #fff;
 
             @include pc {
-                margin: 0 4.8rem 0 0;
+                width: 29.5rem;
+                padding: 1.1rem 1.1rem 1.1rem;
+                font-size: 2.1rem;
+                border-radius: 2.5rem;
             }
 
             &:hover {
@@ -214,36 +222,53 @@ li {
 /* top
 -----------------------------------------*/
 .top {
-    &__container {
-        background-image: url("/assets/image/top_woman.png");
         text-align: center;
         min-height: 31.8rem;
         background-color: #fa7da3;
         color: #fff;
         display: flex;
         margin-top: 6.3rem;
+
+        @include pc {
+            height: auto;
+            width: 100%;
+            min-height: 61.2rem;
+            margin-top: 9.5rem;
+
+          @media (max-width:1500px) {
+
+          }
+          @media (min-width:1501px) {
+              background-size: auto;
+              background-position: left bottom;
+              padding-top: calc(720 / 1500* 100%);
+              position: relative;
+              height: 0;
+          }
+      }
+
+    &__container {
+        background-image: url("/assets/image/top_woman.png");
         background-size: 21rem 22rem;
         background-position: 4% 100%;
 
-        @include pc {
-            background-image: url("/assets/image/woman.png");
-            height: auto;
-            width: 100%;
-            min-height: 72rem;
-            padding: 3.8rem 2rem 5.9rem;
-
+            @include pc {
+                background-image: url("/assets/image/top_woman.png");
+                width: 103rem;
+                margin: 0 auto;
+                background-size: auto;
+                background-position: left bottom;
+            }
             @media (max-width:1500px) {
-                background-size: cover;
-                background-position: center;
+
             }
             @media (min-width:1501px) {
-                background-size: cover;
-                background-position: center;
+                background-size: auto;
+                background-position: left bottom;
                 padding-top: calc(720 / 1500* 100%);
                 position: relative;
                 height: 0;
             }
-        }
     }
     &__left {
         display: flex;
@@ -251,7 +276,7 @@ li {
         width: 52%;
 
         @include pc {
-            width: 16.6rem;
+
 
             @media (min-width:1501px) {
                 padding-top: 0px;
@@ -268,9 +293,9 @@ li {
         margin: 0 0 1.15rem 0;
 
         @include pc {
-            padding-top: 21rem;
             margin: 0 auto;
             max-width: 105.5rem;
+            padding: 0;
 
             @media (min-width:1501px) {
                 padding-top: 0px;
@@ -282,7 +307,8 @@ li {
             }
         }
         &-sp {
-            margin: 1.3rem 0 1.1rem 0;
+            margin: 0 0 0 1.8rem;
+            min-width: 16.6rem;
         }
     }
     &__right {
@@ -451,6 +477,9 @@ li {
     &_02 {
         padding: 1rem 2rem 2rem;
     }
+    &_03 {
+      padding: 2rem 2rem 4rem;
+    }
     &__container {
       text-align: center;
 
@@ -594,7 +623,7 @@ li {
             height: 5.6rem;
             display: inline-block;
             position: absolute;
-            left: 2rem;
+            left: 3%;
             top: 6%;
         }
         &::after {
@@ -604,7 +633,7 @@ li {
             height: 5.6rem;
             display: inline-block;
             position: absolute;
-            right: 2rem;
+            right: 3%;
             top: 6%;
         }
     }
@@ -612,7 +641,7 @@ li {
         text-align: center;
         margin: 0 auto;
         max-width: 35rem;
-        margin: 0 0 3rem 0;
+        margin: 0 auto 3rem;
 
         &--title {
             border-radius: 1rem 1rem 0 0;
@@ -643,6 +672,9 @@ li {
         text-align: left;
         padding: 0 0 1.5rem 0;
     }
+    &__box {
+        justify-content: center;
+    }
     &__item--detail {
         justify-content: center;
         gap: 2rem;
@@ -653,12 +685,12 @@ li {
     &__place_01 {
         background-color: #fff;
         border: 1px solid #fa7da3;
-        padding: 2.4rem 4rem;
+        padding: 23% 4rem;
     }
     &__place_02 {
         background-color: #fdf0f5;
         border: 1px solid #666666;
-        padding: 3.4rem 3.2rem;
+        padding: 20% 3.2rem;
         font-size: 1.8rem;
         letter-spacing: 0.2rem;
         color: #433e3f;
@@ -708,12 +740,17 @@ li {
         flex-wrap: wrap;
         margin: 1rem 0 0;
         row-gap: 1.5rem;
+        max-width: 31.1rem;
+        justify-content: center;
+    }
+    &__second--boxes {
+        padding: 0 0.5rem;
     }
     &__second-pic {
 
     }
     &__second--name {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         color: #fa7da3;
         font-weight: 700;
         padding: 0.5rem 0 0;
@@ -816,7 +853,7 @@ li {
     }
     &__pic {
         width: 31rem;
-        height: 20rem;
+        max-height: 20rem;
     }
 }
 
@@ -824,12 +861,12 @@ li {
 ---------------------------------------- */
 .voice {
     background-color: #fdf0f5;
-    
+
     &__main {
         font-size: 3.2rem;
         font-weight: 700;
         color: #fa7da3;
-        padding: 2.1rem 0 2.9rem 0;
+        padding: 2.1rem 0 1.9rem 0;
         text-align: center;
         letter-spacing: 0.1rem;
         position: relative;
@@ -859,17 +896,43 @@ li {
             top: 6%;
         }
     }
-}
-
-
-
+    &__item {
+        text-align: center;
+        margin: 0 auto;
+        max-width: 35rem;
+        margin: 0 0 1.5rem 0;
+        height: 18.8rem;
+    }
+    &__title {
+        border-radius: 1rem 1rem 0 0;
+        background-color: #fa7da3;
+        font-size: 1.8rem;
+        color: #fff;
+        padding: 1.3rem 0;
+        display: flex;
+        justify-content: center;
+    }
+    &__down {
+        background-color: #fff;
+        display: flex;
+        padding: 1rem 1.2rem 1.5rem 0.5rem;
+        border: 0.1rem solid #fa7da3;
+        border-radius: 0 0 1rem 1rem;
+        gap: 1rem;
+    }
+    &__down--right {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+    }
+    &__img {
+        width: 38rem;
+        margin: 1rem 0 0 0;
+    }
     .swiper__container {
         position: relative;
         width: 100%;
         max-width: 100%;
-        --swiper-pagination-color: #00AFBF;
-        --swiper-pagination-bullet-inactive-color: #EEEEEE;
-        --swiper-pagination-bullet-inactive-opacity: 1;
 
         @include pc {
             max-width: 115.6rem;
@@ -887,308 +950,77 @@ li {
         }
 
         &-slide {
-            padding: 2.9rem 1.5rem 2.5rem 1.5rem;
-            background-color: #DBF7F9;
             width: 28rem;
-            margin: 0 0 1.6rem 0;
 
             @include pc {
-                padding: 4rem 1.7rem 3.8rem 1.5rem;
-            }
-        }
-        &__img {
-            width: 8.5rem;
-            height: 8rem;
-            margin: 0 auto;
 
-            @include pc {
-                width: 10.5rem;
-                height: unset;
-            }
-        }
-        img {
-            padding-left: 0.5rem;
-
-            @include pc {
-                width: 100%;
-                padding-left: 0.5rem;
-            }
-        }
-        &__ppl {
-            font-size: 1.4rem;
-            text-align: center;
-            padding: 1rem 0 1.6rem;
-            letter-spacing: 0.03rem;
-
-            @include pc {
-                padding: 1.1rem 0 1.6rem;
-            }
-        }
-        p {
-            font-size: 1.4rem;
-            line-height: calc(28 / 14);
-
-            @include pc {
-                font-size: 1.6rem;
-                line-height: calc(28 / 16);
-            }
-        }
-        &-pagination {
-            @include pc {
-                --swiper-pagination-color: #00AFBF;
-                --swiper-pagination-bullet-inactive-color: #EEEEEE;
-                --swiper-pagination-bullet-inactive-opacity: 1;
-                position: absolute;
-                bottom: 1%;
-            }
-        }
-        &-pagination-bullets {
-            bottom: -1%;
-
-            @include pc {
-                bottom: 0%;
-            }
-        }
-        &-button-next,
-        &-button-prev {
-            background-size: contain;
-            width: 3.2rem;
-            height: 3.2rem;
-            cursor: pointer;
-            position: absolute;
-            top: 54%;
-            transform: translateY(-54%);
-
-            @include pc {
-                width: 4.8rem;
-                height: 4.8rem;
-            }
-            &::after {
-                content: "";
-            }
-
-        }
-        &-button-prev {
-            background-image: url(/assets/image/arrow_left.svg);
-            left: 0%;
-
-            @include pc {
-                top: 53%;
-                transform: translateY(-50%);
-                left: 0;
-            }
-        }
-        &-button-next {
-            background-image: url(/assets/image/arrow_right.svg);
-            right: 0%;
-
-            @include pc {
-                top: 53%;
-                transform: translateY(-50%);
-                right: 0;
             }
         }
     }
-
-
-/* questions
----------------------------------------- */
-.qu {
-    padding: 3.4rem 1.6rem 1.2rem;
-    background: transparent linear-gradient(90deg, #F4FFE8 0%, #C6F0FE 100%);
-    margin-bottom: 5.1rem;
-
-    @include pc {
-        margin-bottom: 0;
-        padding: 3.8rem 1.6rem 1.8rem;
-    }
-
-    &__title {
-        font-size: 3rem;
-        font-family: "EB Garamond";
-        font-weight: 700;
-        text-align: center;
-        letter-spacing: 0.15rem;
-
-        @include pc {
-            font-size: 4.5rem;
-            line-height: calc(45 /32);
-            letter-spacing: 0.23rem;
-        }
-    }
-    &__title--jp {
+    &__name {
         font-size: 1.6rem;
-        font-weight: 600;
-        padding: 0.8rem 0 3.9rem 0;
-        text-align: center;
-        letter-spacing: 0.09rem;
+        color: #fa7da3;
+        padding: 0.8rem 0 0.8rem;
+        letter-spacing: 0.03rem;
 
         @include pc {
-            font-size: 2rem;
-            padding: 0.8rem 0 4.3rem 0;
+            padding: 1.1rem 0 1.6rem;
         }
     }
-    dl {
-        background-color: #fff;
-        color: #444444;
-        font-size: 1.5rem;
-        line-height: calc(28 / 15);
-        margin-bottom: 2rem;
+    &__note {
+        font-size: 1.4rem;
+        line-height: calc(21 / 14);
 
         @include pc {
-            max-width: 60rem;
-            margin: 0 auto 2.4rem;
+            font-size: 1.6rem;
+            line-height: calc(28 / 16);
         }
     }
-    dt {
-        padding: 1.6rem 4.3rem 1.2rem 4.5rem;
-        position: relative;
-        cursor: pointer;
-        line-height: 1.6;
+    .swiper-pagination {
+        position: unset;
+        padding: 0 0 2rem 0;
 
         @include pc {
-            padding: 2.2rem 4.3rem 1.2rem 5.8rem;
+            --swiper-pagination-color: #fa7da3;;
+            --swiper-pagination-bullet-inactive-color: #ffd2d2;
+            bottom: 1%;
+            width: 15px;
+            height: 15px;
         }
-    }
-    dl:nth-of-type(2) dt,
-    dl:nth-of-type(3) dt {
-        padding: 1.7rem 4.3rem 1.8rem 4.5rem;
+    } --swiper-pagination-bullet-inactive-opacity: 1;
+
+    .swiper-pagination-bullet {
+        background-color: #ffd2d2;
+        bottom: -1%;
+        width: 1.5rem;
+        height: 1.5rem;
 
         @include pc {
-            padding: 2.3rem 4.3rem 1.8rem 5.9rem;
+            bottom: 0%;
         }
-    }
-    dl:nth-of-type(4) dt {
-        padding: 1.6rem 4.3rem 1.8rem 4.5rem;
 
-        @include pc {
-            padding: 2.2rem 4.3rem 1.8rem 5.8rem;
-        }
-    }
-    dl:nth-of-type(5) dt {
-        padding: 1.6rem 4.3rem 1.8rem 4.5rem;
-
-        @include pc {
-            padding: 2.2rem 4.3rem 1.8rem 5.8rem;
-        }
-    }
-    dt::before {
-        content: "Q." ;
-        display: inline-block;
-        font-family: "EB Garamond";
-        font-size: 1.6rem;
-        line-height: 1.9;
-        text-indent: -2.9rem;
-
-        @include pc {
-            text-indent: -3.3rem;
-        }
-    }
-    dt::after {
-        content: "" ;
-        display: inline-block;
-        background-image: url(/assets/image/caret_down.svg);
-        position: absolute;
-        width: 1rem;
-        height: 0.6rem;
-        background-size: contain;
-        right: 1.7rem;
-        top: 3.1rem;
-
-        @include pc {
-            width: 1.2rem;
-            height: 1.2rem;
-            right: 2.5rem;
-            top: 3.2rem;
-        }
-    }
-    dl.open dt::after {
-        content: "" ;
-        background-image: url(/assets/image/caret_up.svg);
-        position: absolute;
-        width: 1rem;
-        height: 0.6rem;
-        background-size: contain;
-        right: 1.7rem;
-        top: 3.1rem;
-
-        @include pc {
-            width: 1.2rem;
-            height: 1.2rem;
-            right: 2.5rem;
-            top: 3.2rem;
-        }
-    }
-    dd {
-        padding: 0rem 1.2rem 2.9rem 4.4rem;
-        display: none;
-        font-size: 1.5rem;
-        line-height: 1.86;
-
-        @include pc {
-            padding: 0.1rem 3.5rem 1.9rem 5.8rem;
-        }
-    }
-    dd::before {
-        content: "A." ;
-        display: inline-block;
-        font-size: 1.6rem;
-        line-height: 1.9;
-        text-indent: -3rem;
-        padding-left: 0.1rem;
-
-        @include pc {
-            text-indent: -3.5rem;
+        &-active {
+            background-color: #fa7da3;
+            width: 1.5rem;
+            height: 1.5rem;
         }
     }
 }
 
-/* scroll
--------------------------------------------- */
-.scroll {
-    background-image: url(/assets/image/back_top.svg);
-    display: flex;
-    justify-content: flex-end;
-    position: fixed;
-    right: 1.6rem;
-    background-size: cover;
-    width: 4rem;
-    height: 4rem;
-
-    @include pc {
-        right: 10%;
-    }
-
-    &:hover {
-        background-image: url(/assets/image/Back_top_hover.svg);
-    }
-}
 
 /* footer
 -------------------------------------------- */
 .footer {
-    background-color: #fff;
-    padding: 2.9rem 1.6rem 2.4rem;
+    background-color: #fa7da3;
+    padding: 2.1rem 0 2.1rem;
 
     @include pc {
         padding: 3.6rem 1.6rem 4.1rem;
 
     }
-
-    &__container {
-        margin: 0 auto;
-
-        @include pc {
-            display: flex;
-            justify-content: space-between;
-            align-items: baseline;
-            margin: 0 16.5rem 0 16.3rem;
-        }
-    }
     &__img {
         width: 16.45rem;
         margin: 0 auto;
-        padding: 0 0 3.4rem 0;
         text-align: center;
 
         @include pc {
@@ -1201,51 +1033,5 @@ li {
         @include pc {
             width: 19rem;
         }
-    }
-    &__item {
-        display: flex;
-        justify-content: center;
-        font-size: 1.2rem;
-        line-height: calc(14 / 12);
-
-        @include pc {
-            font-size: 1.4rem;
-            margin-left: 5rem;
-        }
-    }
-    ul {
-        display: flex;
-        gap: 3rem;
-
-        @include pc {
-            gap: 3.2rem;
-        }
-    }
-
-    li {
-        display: flex;
-        gap: 3rem;
-    }
-    a {
-        color: #fff;
-    }
-    .footer__bottom {
-        text-align: center;
-        padding: 2.1rem 0 0 0;
-
-        @include pc {
-            padding: 0;
-        }
-    }
-    .copyright {
-        font-size: 1.1rem;
-        color: #fff;
-        text-align: center;
-
-        @include pc {
-            padding: 3.2rem 0;
-            font-size: 1.2rem;
-        }
-
     }
 }
